--- a/index.html
+++ b/index.html
@@ -3,60 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sync Up | טכנולוגיה שמניעה עסקים</title>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;400;700&family=Heebo:wght@800&display=swap" rel="stylesheet">
+    <title>Sync Up | Technology Solutions</title>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;700&family=Heebo:wght@100;400;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg: #020c1b;
-            --navy: #0a192f;
-            --light-navy: #112240;
-            --teal: #2cabb1;
-            --gold: #d4af37;
-            --text: #e6f1ff;
-            --slate: #8892b0;
+            --bg: #050505;
+            --accent: #2cabb1; /* הטורקיז מהלוגו */
+            --gold: #d4af37; /* הזהב מהלוגו */
+            --glass: rgba(255, 255, 255, 0.03);
+            --border: rgba(255, 255, 255, 0.1);
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
-            font-family: 'Assistant', sans-serif;
             background-color: var(--bg);
-            color: var(--text);
-            line-height: 1.6;
+            color: #fff;
+            font-family: 'Assistant', sans-serif;
             overflow-x: hidden;
+            -webkit-font-smoothing: antialiased;
         }
 
-        /* רקע דינמי עדין */
-        body::before {
-            content: "";
+        /* רקע אנימטיבי עדין - רשת נקודות */
+        .bg-overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle at 10% 20%, rgba(44, 171, 177, 0.05) 0%, transparent 40%),
-                        radial-gradient(circle at 90% 80%, rgba(212, 175, 55, 0.05) 0%, transparent 40%);
+            background-image: radial-gradient(var(--border) 1px, transparent 1px);
+            background-size: 40px 40px;
             z-index: -1;
+            opacity: 0.5;
         }
 
         header {
-            height: 80px;
+            padding: 40px 8%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 10%;
-            background: rgba(2, 12, 27, 0.8);
-            backdrop-filter: blur(10px);
-            position: fixed;
+            position: absolute;
             width: 100%;
-            top: 0;
-            z-index: 1000;
-            border-bottom: 1px solid rgba(44, 171, 177, 0.1);
+            z-index: 100;
         }
 
         .logo {
             font-family: 'Heebo', sans-serif;
+            font-weight: 100;
             font-size: 1.8rem;
-            color: var(--teal);
-            letter-spacing: 1px;
+            letter-spacing: 4px;
+            text-transform: uppercase;
         }
+
+        .logo span { font-weight: 900; color: var(--accent); }
 
         .hero {
             height: 100vh;
@@ -65,179 +61,146 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 0 20px;
+            padding: 0 10%;
         }
 
         .hero h1 {
             font-family: 'Heebo', sans-serif;
-            font-size: clamp(2.5rem, 6vw, 5rem);
-            line-height: 1.1;
+            font-weight: 900;
+            font-size: clamp(3rem, 10vw, 7rem);
+            line-height: 0.9;
             margin-bottom: 20px;
-        }
-
-        .hero h1 span {
-            display: block;
-            color: var(--teal);
-            font-size: 0.9em;
+            letter-spacing: -2px;
+            background: linear-gradient(180deg, #fff 0%, rgba(255,255,255,0.4) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .hero p {
-            font-size: clamp(1.1rem, 2vw, 1.5rem);
-            color: var(--slate);
-            max-width: 800px;
-            margin-bottom: 40px;
-        }
-
-        .btn {
-            padding: 18px 35px;
-            border: 1px solid var(--gold);
-            color: var(--gold);
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 4px;
-            transition: all 0.3s ease;
-            background: rgba(212, 175, 55, 0.05);
-            font-size: 1.1rem;
-        }
-
-        .btn:hover {
-            background: var(--gold);
-            color: var(--bg);
-            box-shadow: 0 10px 20px rgba(212, 175, 55, 0.2);
-            transform: translateY(-3px);
+            font-weight: 200;
+            font-size: 1.4rem;
+            color: rgba(255,255,255,0.6);
+            max-width: 600px;
+            letter-spacing: 1px;
         }
 
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-            padding: 100px 10%;
-            max-width: 1400px;
-            margin: 0 auto;
+            gap: 1px;
+            background-color: var(--border);
+            border-top: 1px solid var(--border);
+            border-bottom: 1px solid var(--border);
         }
 
         .card {
-            background: var(--light-navy);
-            padding: 40px;
-            border-radius: 8px;
-            border: 1px solid rgba(44, 171, 177, 0.1);
-            transition: all 0.3s ease;
+            background-color: var(--bg);
+            padding: 80px 40px;
+            transition: 0.5s;
             position: relative;
-            overflow: hidden;
         }
 
         .card:hover {
-            transform: translateY(-10px);
-            border-color: var(--teal);
+            background-color: #0a0a0a;
         }
 
         .card h3 {
-            color: var(--text);
+            font-family: 'Heebo', sans-serif;
+            font-weight: 400;
             font-size: 1.5rem;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            color: var(--gold);
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         .card p {
-            color: var(--slate);
-            font-size: 1rem;
+            font-weight: 200;
+            line-height: 1.8;
+            color: rgba(255,255,255,0.5);
         }
 
-        .card::after {
-            content: "→";
-            position: absolute;
-            bottom: 20px;
-            left: 20px;
-            color: var(--teal);
-            font-size: 1.5rem;
-            opacity: 0;
+        .footer-cta {
+            padding: 150px 10%;
+            text-align: center;
+        }
+
+        .contact-link {
+            font-family: 'Heebo', sans-serif;
+            font-size: 2rem;
+            color: #fff;
+            text-decoration: none;
+            border-bottom: 1px solid var(--accent);
+            padding-bottom: 10px;
             transition: 0.3s;
         }
 
-        .card:hover::after {
-            opacity: 1;
-        }
-
-        .tagline {
-            color: var(--teal);
-            font-family: monospace;
-            margin-bottom: 10px;
-            display: block;
+        .contact-link:hover {
+            color: var(--accent);
+            border-color: #fff;
         }
 
         footer {
-            padding: 60px 0;
+            padding: 50px;
             text-align: center;
-            border-top: 1px solid rgba(44, 171, 177, 0.1);
-            color: var(--slate);
+            font-size: 0.8rem;
+            letter-spacing: 2px;
+            color: rgba(255,255,255,0.2);
+            text-transform: uppercase;
         }
 
-        /* וואטסאפ צף */
-        .whatsapp-float {
-            position: fixed;
-            bottom: 40px;
-            right: 40px;
-            background: #25d366;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-            z-index: 1001;
-            transition: 0.3s;
+        /* אנימציה פשוטה לכניסת טקסט */
+        .reveal {
+            animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1);
         }
 
-        .whatsapp-float:hover { transform: scale(1.1); }
+        @keyframes reveal {
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
 
         @media (max-width: 768px) {
-            header { padding: 0 5%; }
-            .grid { padding: 50px 5%; }
+            .hero h1 { font-size: 3.5rem; }
         }
     </style>
 </head>
 <body>
 
+    <div class="bg-overlay"></div>
+
     <header>
-        <div class="logo">Sync Up</div>
-        <div style="color: var(--gold); font-weight: bold;">הטכנולוגיה בשירות החזון</div>
+        <div class="logo">Sync<span>up</span></div>
+        <div style="font-size: 0.8rem; letter-spacing: 2px; color: var(--gold);">EST 2024</div>
     </header>
 
     <section class="hero">
-        <span class="tagline">Welcome to the future of your business</span>
-        <h1>יש לכם רעיון?<br><span>אנחנו נהפוך אותו לטכנולוגיה</span></h1>
-        <p>Sync Up מפתחת ומיישמת פתרונות טכנולוגיים מתקדמים, מארכיטקטורת מערכות מורכבות ועד אוטומציות חכמות. אנחנו כאן כדי להניע את העסק שלכם קדימה.</p>
-        <a href="#contact" class="btn">בואו נבנה משהו גדול</a>
+        <h1 class="reveal">Sync Up.</h1>
+        <p class="reveal">טכנולוגיה שמניעה עסקים</p>
     </section>
 
     <div class="grid">
         <div class="card">
-            <h3>פיתוח Custom</h3>
-            <p>אנחנו לא מוגבלים לפלטפורמות. כתיבת קוד ופיתוח פתרונות טכנולוגיים מאפס, מותאמים אישית לצרכים המדויקים שלכם.</p>
+            <h3>Custom Build</h3>
+            <p>אנחנו לא מאמינים בפתרונות מדף. כל מערכת נתפרת מאפס לפי הצורך המדויק שלכם – מקוד מלא ועד ארכיטקטורת נתונים מורכבת.</p>
         </div>
         <div class="card">
-            <h3>סנכרון ואוטומציה</h3>
-            <p>חיבור בין מערכות, ייעול תהליכי עבודה וביטול פעולות ידניות. אנחנו גורמים למערכות שלכם לדבר זו עם זו.</p>
+            <h3>Automation</h3>
+            <p>סינכרון מלא בין כל המערכות בעסק. אנחנו הופכים תהליכים ידניים לכלים אוטונומיים שחוסכים זמן ומבטלים טעויות אנוש.</p>
         </div>
         <div class="card">
-            <h3>תקשורת חכמה</h3>
-            <p>בניית בוטים מתקדמים, מערכות IVR חכמות וממשקי לקוח שמייצרים חוויה דיגיטלית חלקה ומקצועית.</p>
+            <h3>Intelligence</h3>
+            <p>בוטים חכמים, מערכות IVR מתקדמות וניהול CRM. אנחנו מעניקים לעסק שלכם את חזית הטכנולוגיה כדי לייצר יתרון תחרותי.</p>
         </div>
     </div>
 
-    <section style="text-align: center; padding: 100px 20px;" id="contact">
-        <h2 style="font-size: 2.5rem; margin-bottom: 20px;">מוכנים לסנכרן את העסק?</h2>
-        <p style="color: var(--slate); margin-bottom: 40px;">האתגר הטכנולוגי הבא שלכם מחכה לביצוע שלנו.</p>
-        <a href="https://wa.me/YOUR_PHONE" class="btn" style="background: var(--gold); color: var(--bg);">צרו קשר עכשיו</a>
+    <section class="footer-cta">
+        <h2 style="font-weight: 200; margin-bottom: 50px; opacity: 0.6;">יש לכם רעיון? בואו נסנכרן אותו.</h2>
+        <a href="mailto:your@email.com" class="contact-link">Get in touch</a>
     </section>
 
     <footer>
-        <p>&copy; 2024 Sync Up | טכנולוגיה שמניעה עסקים</p>
+        &copy; Sync Up Technology Solutions // Innovation Through Code
     </footer>
-
-    <a href="https://wa.me/YOUR_PHONE" class="whatsapp-float">
-        <svg width="35" height="35" fill="white" viewBox="0 0 24 24"><path d="M12.031 6.172c-2.32 0-4.519.903-6.16 2.544-1.64 1.64-2.542 3.841-2.542 6.162 0 1.84.548 3.53 1.511 4.999L3.487 24l4.447-1.353c1.326.815 2.85 1.243 4.417 1.243 4.802 0 8.71-3.908 8.71-8.71s-3.908-8.71-8.71-8.71zm0 15.949c-1.465 0-2.833-.429-4.004-1.239l-.286-.195-2.618.796.811-2.553-.213-.339c-.886-1.413-1.355-3.05-1.355-4.739 0-4.01 3.264-7.275 7.275-7.275s7.275 3.265 7.275 7.275-3.265 7.275-7.275 7.275zm4.034-5.542c-.221-.11-.1.305-.915-.052-.15-.066-.889-.367-1.631-.738-.742-.371-.85-.465-.958-.559-.108-.094-.216-.188-.324-.282-.108-.094-.013-.216.081-.31s.377-.444.565-.664c.188-.22.251-.314.377-.52.126-.206.063-.385-.031-.574s-.85-2.046-1.164-2.805c-.314-.759-.628-.655-.85-.655h-.723c-.251 0-.659.094-.973.438s-1.226 1.188-1.226 2.893 1.226 3.344 1.383 3.564c.157.22 2.41 3.673 5.839 5.151.815.351 1.451.56 1.948.717.818.259 1.563.222 2.152.134.656-.098 2.016-.823 2.3-1.62.284-.797.284-1.48.199-1.62-.086-.14-.309-.221-.53-.331z"/></svg>
-    </a>
 
 </body>
 </html>
